--- a/src/view/compraComprar.html
+++ b/src/view/compraComprar.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../../public/style/main.css">
-    <link rel="stylesheet" href="../../public/style/mainStyle.css">
-    <link rel="stylesheet" href="../../public/style/pagetable.css">
-    <link rel="stylesheet" href="../../public/style/formStyle.css">
+    <link rel="stylesheet" href="/style/main.css">
+    <link rel="stylesheet" href="/style/mainStyle.css">
+    <link rel="stylesheet" href="/style/pagetable.css">
+    <link rel="stylesheet" href="/style/formStyle.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 
@@ -18,71 +18,71 @@
         <h1>Escolha uma opção</h1>
 
         <button class="button-menu">
-            <a href="celeiro.html">
-                <img src="../../public/imagem/menu/celeiro.png" alt="Celeiro">
+            <a href="/celeiro">
+                <img src="/imagem/menu/celeiro.png" alt="Celeiro">
                 Celeiro
             </a>
         </button>
 
         <button class="button-menu">
-            <a href="armazem.html">
-                <img src="../../public/imagem/menu/armazem.png" alt="Armazem">
+            <a href="/armazem">
+                <img src="/imagem/menu/armazem.png" alt="Armazem">
                 Armazém
             </a>
         </button>
 
         <button class="button-menu">
-            <a href="compra.html">
-                <img src="../../public/imagem/menu/compra.png" alt="Compra">
+            <a href="/compra">
+                <img src="/imagem/menu/compra.png" alt="Compra">
                 Compra
             </a>
         </button> 
 
         <button class="button-menu">
-            <a href="venda.html">
-                <img src="../../public/imagem/menu/vender.png" alt="Venda">
+            <a href="/venda">
+                <img src="/imagem/menu/vender.png" alt="Venda">
                 Venda
             </a>
         </button>
         
         <button class="button-menu">
-            <a href="colaborador.html">
-                <img src="../../public/imagem/menu/colaborador.png" alt="Colaborador">
+            <a href="/colaborador">
+                <img src="/imagem/menu/colaborador.png" alt="Colaborador">
                 Colaborador
             </a>
         </button>
         
         <button class="button-menu">
-            <a href="estufa.html">
-                <img src="../../public/imagem/menu/estufa.png" alt="Estufa">
+            <a href="/estufa">
+                <img src="/imagem/menu/estufa.png" alt="Estufa">
                 Estufa
             </a>
         </button>
         
         <button class="button-menu">
-            <a href="relatorio.html">
-                <img src="../../public/imagem/menu/relatorio-seo.png" alt="Relatório">
+            <a href="/relatorio">
+                <img src="/imagem/menu/relatorio-seo.png" alt="Relatório">
                 Relatório
             </a>
         </button>
         
         <button class="button-menu">
-            <a href="atividades.html">
-                <img src="../../public/imagem/menu/atividade.png" alt="Atividade">
+            <a href="/atividade">
+                <img src="/imagem/menu/atividade.png" alt="Atividade">
                 Atividade 
             </a>
         </button>
         
         <button class="button-menu-exit">
-           <a href="loginPage.html">
-                <img class="footer" src="../../public/imagem/menu/sair.png" alt="Sair">
+           <a href="/">
+                <img class="footer" src="/imagem/menu/sair.png" alt="Sair">
                 <p>Sair</p>
             </a> 
         </button>
 
         <button class="button-menu-perfil">
-            <a href="perfil.html">
-                <img class="footer" src="../../public/imagem/menu/perfil.png" alt="Perfil">
+            <a href="/perfil">
+                <img class="footer" src="/imagem/menu/perfil.png" alt="Perfil">
                 <p>Perfil</p>
             </a>
         </button>        
@@ -92,7 +92,7 @@
         <h1>
             Compra
             <a href="compra.html">
-                <img src="../../public/imagem/voltar.png" alt="">
+                <img src="/imagem/voltar.png" alt="">
                 Voltar
             </a>
         </h1>
@@ -119,7 +119,7 @@
                         </select>
                     </div>
                     <button type="submit">
-                        <img src="../../public/imagem/mais.png" alt="Adicionar">
+                        <img src="/imagem/mais.png" alt="Adicionar">
                     </button>
                 </div>
                 <div class="read-block">
@@ -141,11 +141,11 @@
 
                 <div class="foot-dados-Botton">
                     <div class="aviso-foot">
-                         <img src="../../public/imagem/aviso.png" alt="Aviso">
+                         <img src="/imagem/aviso.png" alt="Aviso">
                          <p>Caso não tenha achado o Fornecedor é possivel adiciona-lo</p>
                     </div>
                     <a href="compraCriarFornecedor.html">
-                        <img src="../../public/imagem/fornecedor.png" alt="Fornecedor">
+                        <img src="/imagem/fornecedor.png" alt="Fornecedor">
                         <p>Adicionar Fornecedor</p>
                     </a>
                 </div>               
@@ -170,7 +170,7 @@
                         </select>
                     </div>
                     <button type="submit">
-                        <img src="../../public/imagem/mais.png" alt="Adicionar">
+                        <img src="/imagem/mais.png" alt="Adicionar">
                     </button>
                 </div>
 
@@ -185,7 +185,7 @@
                     <tr>
                         <th class="lixo">
                             <button>
-                                <img src="../../public/imagem/lixo.png" alt="Lixo">
+                                <img src="/imagem/lixo.png" alt="Lixo">
                             </button>
                         </th>
                         <td>muda de alface</td>
@@ -196,7 +196,7 @@
                     <tr>
                         <th class="lixo">
                             <button>
-                                <img src="../../public/imagem/lixo.png" alt="Lixo">
+                                <img src="/imagem/lixo.png" alt="Lixo">
                             </button>
                         </th>
                         <td>muda de beterraba</td>
@@ -207,7 +207,7 @@
                     <tr>
                         <th class="lixo">
                             <button>
-                                <img src="../../public/imagem/lixo.png" alt="Lixo">
+                                <img src="/imagem/lixo.png" alt="Lixo">
                             </button>
                         </th>
                         <td>semente cenoura</td>
@@ -218,11 +218,11 @@
                 </table>
                 <div class="foot-dados-Botton">
                     <div class="aviso-foot">
-                         <img src="../../public/imagem/aviso.png" alt="Aviso">
+                         <img src="/imagem/aviso.png" alt="Aviso">
                          <p>Caso não tenha achado o insumo é possivel adiciona-lo.</p>
                     </div>
                     <a href="compraCriarInsumo.html">
-                        <img src="../../public/imagem/insumo.png" alt="Insumo">
+                        <img src="/imagem/insumo.png" alt="Insumo">
                         <p>Criar Insumo</p>
                     </a>
                 </div> 
