--- a/src/view/colaboradorCriarColaborador.html
+++ b/src/view/colaboradorCriarColaborador.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../../public/style/main.css">
-    <link rel="stylesheet" href="../../public/style/mainStyle.css">
-    <link rel="stylesheet" href="../../public/style/pagetable.css">
-    <link rel="stylesheet" href="../../public/style/formStyle.css">
+    <link rel="stylesheet" href="/style/main.css">
+    <link rel="stylesheet" href="/style/mainStyle.css">
+    <link rel="stylesheet" href="/style/pagetable.css">
+    <link rel="stylesheet" href="/style/formStyle.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 
@@ -18,105 +18,105 @@
         <h1>Escolha uma opção</h1>
 
         <button class="button-menu">
-            <a href="celeiro.html">
-                <img src="../../public/imagem/menu/celeiro.png" alt="Celeiro">
+            <a href="/celeiro">
+                <img src="/imagem/menu/celeiro.png" alt="Celeiro">
                 Celeiro
             </a>
         </button>
 
         <button class="button-menu">
-            <a href="armazem.html">
-                <img src="../../public/imagem/menu/armazem.png" alt="Armazem">
+            <a href="/armazem">
+                <img src="/imagem/menu/armazem.png" alt="Armazem">
                 Armazém
             </a>
         </button>
 
         <button class="button-menu">
-            <a href="compra.html">
-                <img src="../../public/imagem/menu/compra.png" alt="Compra">
+            <a href="/compra">
+                <img src="/imagem/menu/compra.png" alt="Compra">
                 Compra
             </a>
         </button> 
 
         <button class="button-menu">
-            <a href="venda.html">
-                <img src="../../public/imagem/menu/vender.png" alt="Venda">
+            <a href="/venda">
+                <img src="/imagem/menu/vender.png" alt="Venda">
                 Venda
             </a>
         </button>
         
         <button class="button-menu">
-            <a href="colaborador.html">
-                <img src="../../public/imagem/menu/colaborador.png" alt="Colaborador">
+            <a href="/colaborador">
+                <img src="/imagem/menu/colaborador.png" alt="Colaborador">
                 Colaborador
             </a>
         </button>
         
         <button class="button-menu">
-            <a href="estufa.html">
-                <img src="../../public/imagem/menu/estufa.png" alt="Estufa">
+            <a href="/estufa">
+                <img src="/imagem/menu/estufa.png" alt="Estufa">
                 Estufa
             </a>
         </button>
         
         <button class="button-menu">
-            <a href="relatorio.html">
-                <img src="../../public/imagem/menu/relatorio-seo.png" alt="Relatório">
+            <a href="/relatorio">
+                <img src="/imagem/menu/relatorio-seo.png" alt="Relatório">
                 Relatório
             </a>
         </button>
         
         <button class="button-menu">
-            <a href="atividades.html">
-                <img src="../../public/imagem/menu/atividade.png" alt="Atividade">
+            <a href="/atividade">
+                <img src="/imagem/menu/atividade.png" alt="Atividade">
                 Atividade 
             </a>
         </button>
         
         <button class="button-menu-exit">
-           <a href="loginPage.html">
-                <img class="footer" src="../../public/imagem/menu/sair.png" alt="Sair">
+           <a href="/">
+                <img class="footer" src="/imagem/menu/sair.png" alt="Sair">
                 <p>Sair</p>
             </a> 
         </button>
 
         <button class="button-menu-perfil">
-            <a href="perfil.html">
-                <img class="footer" src="../../public/imagem/menu/perfil.png" alt="Perfil">
+            <a href="/perfil">
+                <img class="footer" src="/imagem/menu/perfil.png" alt="Perfil">
                 <p>Perfil</p>
             </a>
         </button>        
     </div>
-    
+
     <div class="main">
         <h1>
             Colaborador
             <a href="colaborador.html">
-                <img src="../../public/imagem/voltar.png" alt="">
+                <img src="/imagem/voltar.png" alt="">
                 Voltar
             </a>
         </h1>
 
-        <form>
+        <form action="/criarColaborador" method="POST">
             <fieldset class="dados-Top">
                 <div class="title">
                     <legend>Dados do Colaborador</legend>
                 </div>
                 <div class="write-block">
                     <label for="nomeColaborador">Nome:</label>
-                    <input type="text" id="nomeColaborador" name="nomeColaborador" value="Matheus de Barros Santos">
+                    <input type="text" id="nomeColaborador" name="nomeColaborador" required>
                 </div>
                <div class="write-block">
                     <label for="cpfColaborador">CPF Colaborador:</label>
-                    <input type="text" id="cpfColaborador" name="cpfColaborador" value="440.998.787-23">
+                    <input type="text" id="cpfColaborador" name="cpfColaborador" required>
                 </div>
                 <div class="write-block">
                     <label for="telefoneColaborador">Telefone Colaborador:</label>
-                    <input type="text" id="telefoneColaborador" name="telefoneColaborador" value="(11)99898-6544">
+                    <input type="text" id="telefoneColaborador" name="telefoneColaborador" required>
                 </div>
                 <div class="write-block">
-                    <label for="dtNasciamntoColaborador">Validade:</label>
-                    <input type="date" id="dtNasciamntoColaborador" name="dtNasciamntoColaborador" value="1980-08-02">
+                    <label for="dtNasciColaborador">Data de Nacimento:</label>
+                    <input type="date" id="dtNasciColaborador" name="dtNasciColaborador" required>
                 </div> 
             </fieldset>
 
@@ -126,22 +126,36 @@
                 </div>
                 <div class="write-block">
                     <label for="emailColaborador">Email Colaborador:</label>
-                    <input type="text" id="emailColaborador" name="emailColaborador" value="matheus.santos@gmail.com">
+                    <input type="text" id="emailColaborador" name="emailColaborador" required>
+                </div>
+                <div class="write-block">
+                    <label for="senhaColaboradorI">Senha:</label>
+                    <input type="password" id="senhaColaboradorI" name="senhaColaboradorI" required>
+                </div>
+                <div class="write-block">
+                    <label for="senhaColaboradorII">Repitir senha:</label>
+                    <input type="password" id="senhaColaboradorII" name="senhaColaboradorII" required>
                 </div>
                 <div class="write-block">
                     <label for="funcaoColaborador">Função do Colaborador:</label>
-                    <input type="text" id="funcaoColaborador" name="funcaoColaborador" value="Colaborador Financeiro">
-                </div>
-                <div class="write-block">
-                    <label for="dtAdmissao">Data de Admissão:</label>
-                    <input type="date" id="dtAdmissao" name="dtAdmissao" value="2020-02-02" readonly>
+                    <select name="funcaoColaborador" id="funcaoColaborador" required>
+                        <option selected disabled>Selecione uma opição</option>
+                        <option value="Colaborador Financeiro">Colaborador Financeiro</option> 
+                        <option value="Colaborador de Produção">Colaborador de Produção</option>
+                    </select>
                 </div>
             </fieldset>
+            <div class="foot-dados-Botton">
+                <div class="aviso-foot">
+                     <img src="/imagem/aviso.png" alt="Aviso">
+                     <p>{{ message }}</p>
+                </div>
+            </div>    
 
             <div class="botton-foot">
 
                 <button type="submit" class="button-Salvar">
-                    <a href="colaborador.html">Salvar Cadastro</a>
+                    Salvar Cadastro
                 </button>  
             </div>
         </form>        
