Compra do sistema

--- a/src/view/atividades.html
+++ b/src/view/atividades.html
@@ -132,7 +132,7 @@
         </div>
 
         <div class="button-main">
-            <a href="atividadesCriar.html">Criar Atividader</a>
+            <a href="/criarAtividade">Criar Atividader</a>
         </div>
     </div>
 </body>
