--- a/src/view/compra.html
+++ b/src/view/compra.html
@@ -115,7 +115,7 @@
             </tr>
         </table>
         <div class="button-main">
-            <a href="compraComprar.html">Comprar</a>
+            <a href="/realizarCompra">Comprar</a>
         </div>
     </div>
 </body>
