--- a/src/view/colaboradorCriarColaborador.html
+++ b/src/view/colaboradorCriarColaborador.html
@@ -139,7 +139,7 @@
                 <div class="write-block">
                     <label for="funcaoColaborador">Função do Colaborador:</label>
                     <select name="funcaoColaborador" id="funcaoColaborador" required>
-                        <option selected disabled>Selecione uma opição</option>
+                        <option selected disabled>Selecione uma opção</option>
                         <option value="Colaborador Financeiro">Colaborador Financeiro</option> 
                         <option value="Colaborador de Produção">Colaborador de Produção</option>
                     </select>
