--- a/src/view/compraAdicionarInsumo.html
+++ b/src/view/compraAdicionarInsumo.html
@@ -91,53 +91,85 @@
     <div class="main">
         <h1>
             Compra
-            <a href="/adicionarInsumo">
+            <a href="/realizarCompra">
                 <img src="/imagem/voltar.png" alt="">
                 Voltar
             </a>
         </h1>
         
-        <form action="/criarInsumo" method="POST">
+        
+        <form action="/buscaInsumo" method="POST">
             <fieldset class="dados-Top">
                 <div class="title">
-                    <legend>Criar Insumo</legend>
+                    <legend>Adicionar Insumo para <strong>{{nomeFornecedor}}</strong></legend>
                 </div>
-                <div class="write-block">
-                    <label for="nomeInsumo">Nome do Insumo:</label>
-                    <input type="text" id="nomeInsumo" name="nomeInsumo" required>
-                </div>
-                <div class="write-block">
-                    <label for="contagemInsumo">Como você gostaria que contássemos esse insumo:</label>
-                    <select name="contagemInsumo" id="contagemInsumo" required>
+            <div class="select-block">
+                <div class="select">
+                    <label for="nomeInsumo">Insumo:</label>
+                    <select name="codInsumo" id="nomeInsumo">
                         <option value="" disable="" hidden="">Selecione uma opição</option> 
-                        <option value="U">U - Unidade</option> 
-                        <option value="Kg">Kg - Quilograma</option>
-                        <option value="L">L - Litro</option>
+                        {%for insumo in listaInsumo%}
+                            <option value={{insumo.cod_Insumo}}>{{ insumo.nome_Insumo }}</option>
+                        {%endfor%}  
                     </select>
                 </div>
-                <div class="write-block">
-                    <label for="tipoInsumo">Tipo de Insumo:</label>
-                    <select name="tipoInsumo" id="tipoInsumo" required>
-                        <option value="" disable="" hidden="">Selecione uma opição</option>
-                        <option value="plantar">Plantar</option> 
-                        <option value="aplicar">Aplicar</option>
-                    </select>
-                </div>               
+                <button type="submit">
+                    <img src="/imagem/procurar.png" alt="Adicionar">
+                </button>
+            </div>
+            <div class="foot-dados-Botton">
+                <div class="aviso-foot">
+                    <img src="/imagem/aviso.png" alt="Aviso">
+                    <p>Caso não tenha achado o insumo é possivel cria-lo</p>
+                </div>
+                <a href="/criarInsumo">
+                    <img src="/imagem/insumo.png" alt="Insumo">
+                    <p>Criar Insumo</p>
+                </a>
+            </div>
             </fieldset>
+        </form>
+       
 
-            {% if message != "" %}
-                 <div class="foot-dados-Botton">
-                    <div class="aviso-foot">
-                        <img src="/imagem/aviso.png" alt="Aviso">
-                        <p>{{message}}</p>
-                    </div>
-                </div>               
-            {% endif %}
-            <button type="submit" class="button-Salvar">
-                Salvar
-            </button>
-        </form> 
-        
+        <form action="/adicionarInsumo" method="POST">
+            <fieldset class="foot-dados-Botton">
+                <div class="read-block">
+                    <label for="nomeInsumo">Nome do Insumo:</label>
+                    <p class="input">{{dadosInsumo.nome_Insumo}}</p>
+                </div>
+                <div class="read-block">
+                    <label for="tipoInsumo">Tipo do Insumo:</label>
+                    <p class="input">{{dadosInsumo.tipo_Insumo}}</p>
+                </div>
+                <div class="write-block">
+                    <label for="tempoEntrega">Quantos dias para ser Entregue:</label>
+                    <input type="number" id="tempoEntrega" name="tempoEntrega" required>
+                </div>  
+                <button type="submit" class="button-adicionar"> <img src="/imagem/mais.png" alt="Adicionar"> Adicionar Insumo</button>     
+                <table>
+                    <tr>
+                        <th colspan="3">Insumos Adicionadados</th>
+                    </tr>
+                    <tr class="head">
+                        <th>Nome do Insumo</th>
+                        <th>Data de Entrga</th>
+                    </tr>
+                    {%for Insumo in tabelaInsumos%}
+                        <tr>
+                            <td>{{Insumo.nome_Insumo}}</td>
+                            <td>{{Insumo.tempo_Entrega}}</a></td>
+                        </tr>
+                    {%endfor%}  
+                </table>
+            </fieldset>
+            <div>
+                <a href="/comprarInsumo">
+                    <img src="/imagem/aprovar.png" alt="concluir">
+                    Concluir o Cadastro
+                </a>
+            </div>
+            
+        </form>
     </div>
 </body>
 </html>
