--- a/src/view/compraComprarFornecedor.html
+++ b/src/view/compraComprarFornecedor.html
@@ -91,53 +91,83 @@
     <div class="main">
         <h1>
             Compra
-            <a href="/adicionarInsumo">
+            <a href="/compra">
                 <img src="/imagem/voltar.png" alt="">
                 Voltar
             </a>
         </h1>
         
-        <form action="/criarInsumo" method="POST">
+        <form action="/buscarFornecedor" method="POST">
             <fieldset class="dados-Top">
                 <div class="title">
-                    <legend>Criar Insumo</legend>
+                    <legend>Dados da Compra</legend>
                 </div>
-                <div class="write-block">
-                    <label for="nomeInsumo">Nome do Insumo:</label>
-                    <input type="text" id="nomeInsumo" name="nomeInsumo" required>
+            </fieldset>
+            <fieldset class="dados-Botton">
+                <div class="title">
+                    <legend>Escolha um Fornecedor</legend>
                 </div>
-                <div class="write-block">
-                    <label for="contagemInsumo">Como você gostaria que contássemos esse insumo:</label>
-                    <select name="contagemInsumo" id="contagemInsumo" required>
-                        <option value="" disable="" hidden="">Selecione uma opição</option> 
-                        <option value="U">U - Unidade</option> 
-                        <option value="Kg">Kg - Quilograma</option>
-                        <option value="L">L - Litro</option>
-                    </select>
+                <div class="select-block">
+                    <div class="select">
+                        <label for="codFornecedorInsumo">Nome do Fornecedor:</label>
+                        <select name="codFornecedorInsumo" id="codFornecedorInsumo">
+                            <option value="" disable="" hidden="">Selecione uma opição</option> 
+                            {%for fornecedor in listaFornecedor%}
+                                <option value={{fornecedor.cod_Fornecedor}}>{{ fornecedor.nome_Fornecedor }}</option>
+                            {%endfor%}  
+                        </select>
+                    </div>
+                    <button type="submit">
+                        <img src="/imagem/mais.png" alt="Adicionar">
+                    </button>
                 </div>
-                <div class="write-block">
-                    <label for="tipoInsumo">Tipo de Insumo:</label>
-                    <select name="tipoInsumo" id="tipoInsumo" required>
-                        <option value="" disable="" hidden="">Selecione uma opição</option>
-                        <option value="plantar">Plantar</option> 
-                        <option value="aplicar">Aplicar</option>
-                    </select>
+            </fieldset>
+        </form>
+            
+        <form action="/buscaFornecedor" method="POST">
+            
+                <div class="read-block">
+                    <label for="nomeFornecedor">Nome do Fornecedor:</label>
+                    <p class="input">{{dadosFornecedor.nome_Fornecedor}}</p>
+                </div>
+                <div class="read-block">
+                    <label for="docFornecedor">CNPJ do Fornecedor:</label>
+                    <p class="input">{{dadosFornecedor.doc_Fornecedor}}</p>
+                </div>
+                <div class="read-block">
+                    <label for="telefoneFornecedor">Telefone do Fornecedor:</label>
+                    <p class="input">{{dadosFornecedor.telefone_Fornecedor}}</p>
+                </div>
+                <div class="read-block">
+                    <label for="cepFornecedor">CEP do Fornecedor:</label>
+                    <p class="input">{{dadosFornecedor.cep_Fornecedor}}</p>
+                </div>
+                <div class="read-block">
+                    <label for="emailFornecedor">Email do Fornecedor:</label>
+                    <p class="input">{{dadosFornecedor.email_Fornecedor}}</p>
+                </div>
+
+                <div class="foot-dados-Botton">
+                    <div class="aviso-foot">
+                         <img src="/imagem/aviso.png" alt="Aviso">
+                         <p>Caso não tenha achado o Fornecedor é possivel cria-lo</p>
+                    </div>
+                    <a href="/criarFornecedor">
+                        <img src="/imagem/fornecedor.png" alt="Fornecedor">
+                        <p>Criar Fornecedor</p>
+                    </a>
                 </div>               
             </fieldset>
-
-            {% if message != "" %}
-                 <div class="foot-dados-Botton">
-                    <div class="aviso-foot">
-                        <img src="/imagem/aviso.png" alt="Aviso">
-                        <p>{{message}}</p>
-                    </div>
-                </div>               
-            {% endif %}
-            <button type="submit" class="button-Salvar">
-                Salvar
-            </button>
-        </form> 
+        </form>
+           
         
+
+            <button type="submit" class="button-Finalizar">
+                <a href="/comprarInsumo">
+                    Próxima Etapa
+                </a>
+            </button>
+        </form>
     </div>
 </body>
 </html>
